Introduce cache for resources used by signing to improve its performance.